--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,3 +1,4 @@
 <div *ngFor="let recipe of recipes">
  <p>{{recipe.title}}</p>
+ <a class="viewRecipe" routerLink="/recipe/{{recipe.id}}">Details</a>
 </div>
