added recipe create and edit component

--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -3,4 +3,5 @@
 <p>{{recipe[0].ingredients}}</p>
 <p>{{recipe[0].steps}}</p>
 <p>{{recipe[0].date | date}}</p>
+<p>{{recipe[0].category}}</p>
 </div>
