--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -4,4 +4,5 @@
 <p>{{recipe[0].steps}}</p>
 <p>{{recipe[0].date | date}}</p>
 <p>{{recipe[0].category}}</p>
+<a class="edit" routerLink="/recipe/edit/{{recipe[0].id}}">Edit</a>
 </div>
