added formsmodule to app module

--- a/src/app/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,32 @@
-<p>recipe-edit works!</p>
+<div>
+    <form>
+        <div>
+            <input type="text" name="recipeTitle" [(ngModel)]="recipe.title" placeholder="title">
+        </div>
+        <div>
+            <input type="text" name="recipeTitle" [(ngModel)]="recipe.title" placeholder="title">
+        </div>
+        <div>
+            <input type="text" name="recipeTitle" [(ngModel)]="recipe.title" placeholder="title">
+        </div>
+        <div>
+            <input type="text" name="recipeTitle" [(ngModel)]="recipe.title" placeholder="title">
+        </div>
+        <div>
+            <input type="text" name="recipeTitle" [(ngModel)]="recipe.title" placeholder="title">
+        </div>
+        <div>
+            <select name="courseType" ngModel>
+            </select>
+        </div>
+    </form>
+</div>
+
+title: string;
+description: string;
+ingredients: string;
+steps: string;
+date: Date;
+CourseType: CourseType;
+Category: Category;
+*/
