--- a/src/app/recipe-create/recipe-create.component.html
+++ b/src/app/recipe-create/recipe-create.component.html
@@ -1,1 +1,33 @@
-<p>recipe-create works!</p>
+<form>
+    <div class="form-group">
+        <input type="hidden" name="id" class="form-control" [(ngModel)]="recipe[0].id">
+        <input type="text" name="title" class="form-control" [(ngModel)]="recipe[0].title" placeholder="title">
+    </div>
+    <div class="form-group">
+        <input type="text" name="description" class="form-control" [(ngModel)]="recipe[0].description" placeholder="description">
+    </div>
+    <div class="form-group">
+        <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe[0].ingredients" placeholder="ingredients">
+    </div>
+    <div class="form-group">
+        <input type="text" name="steps" class="form-control" [(ngModel)]="recipe[0].steps" placeholder="steps">
+    </div>
+    <div class="form-group">
+        <select class="form-control" name="courseType" ngModel>
+            <option value="" disabled>Choose a course type</option>
+            <option *ngFor="let courseType of courseTypes | keyvalue" [ngValue]="courseType">
+                {{courseType.key}}</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <select class="form-control" name="category" ngModel>
+            <option value="" disabled>Choose a category</option>
+            <option *ngFor="let category of categories | keyvalue" [ngValue]="category">
+                {{category.key}}</option>
+        </select>
+    </div>
+    <button type="submit" (click)="createRecipe()">Edit</button>
+</form>
+
+
+<a routerLink="/recipes">Back to home</a>
