modified edit and recipe component, api url

--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,6 +1,10 @@
-<div *ngFor="let recipe of recipes">
- <p>{{recipe.title}}</p>
- <a class="viewRecipe" routerLink="/recipe/{{recipe.id}}">Details</a>
- <button><a class="createRecipe" routerLink="/create/">New</a>
-</button>
+<div *ngIf="recipes">
+
+    <div *ngFor="let recipe of recipes">
+        <p>{{recipe.title}}</p>
+        <span>{{recipe.id}}</span>
+        <a class="viewRecipe" routerLink="/recipe/{{recipe.id}}">Details</a>
+    </div>
+    
+    <button class="createRecipe" routerLink="/create/">New</button>
 </div>
