--- a/src/app/recipe-create/recipe-create.component.html
+++ b/src/app/recipe-create/recipe-create.component.html
@@ -1,16 +1,15 @@
 <form>
     <div class="form-group">
-        <input type="hidden" name="id" class="form-control" [(ngModel)]="recipe[0].id">
-        <input type="text" name="title" class="form-control" [(ngModel)]="recipe[0].title" placeholder="title">
+        <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="title">
     </div>
     <div class="form-group">
-        <input type="text" name="description" class="form-control" [(ngModel)]="recipe[0].description" placeholder="description">
+        <input type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="description">
     </div>
     <div class="form-group">
-        <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe[0].ingredients" placeholder="ingredients">
+        <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe.ingredients" placeholder="ingredients">
     </div>
     <div class="form-group">
-        <input type="text" name="steps" class="form-control" [(ngModel)]="recipe[0].steps" placeholder="steps">
+        <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="steps">
     </div>
     <div class="form-group">
         <select class="form-control" name="courseType" ngModel>
@@ -26,7 +25,7 @@
                 {{category.key}}</option>
         </select>
     </div>
-    <button type="submit" (click)="createRecipe()">Edit</button>
+    <button type="submit" (click)="createRecipe()">Create</button>
 </form>
 
 
