--- a/src/app/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-edit/recipe-edit.component.html
@@ -1,18 +1,17 @@
-<div *ngIf="recipe[0]">
+<div *ngIf="recipe">
     <form>
-        
         <div class="form-group">            
-            <input type="hidden" name="id" class="form-control" [(ngModel)]="recipe[0].id" >
-            <input type="text" name="title" class="form-control" [(ngModel)]="recipe[0].title" placeholder="title">
+            <input type="hidden" name="id" class="form-control" [(ngModel)]="recipe.id" >
+            <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="title">
         </div>
         <div class="form-group">
-            <input type="text" name="description" class="form-control" [(ngModel)]="recipe[0].description" placeholder="description">
+            <input type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="description">
         </div>
         <div class="form-group">
-            <input type="text" name="ingredients" class="form-control"[(ngModel)]="recipe[0].ingredients" placeholder="ingredients">
+            <input type="text" name="ingredients" class="form-control"[(ngModel)]="recipe.ingredients" placeholder="ingredients">
         </div>
         <div class="form-group"> 
-            <input type="text" name="steps" class="form-control" [(ngModel)]="recipe[0].steps" placeholder="steps">
+            <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="steps">
         </div>
         <div class="form-group">
             <select class="form-control" name="courseType" ngModel>
