--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,10 +1,11 @@
-<div id="recipe" *ngIf="recipe?.length > 0">
-<p>{{recipe[0].title}}</p>
-<p>{{recipe[0].description}}</p>
-<p>{{recipe[0].ingredients}}</p>
-<p>{{recipe[0].steps}}</p>
-<p>{{recipe[0].date | date}}</p>
-<p>{{recipe[0].courseType}}</p>
-<p>{{recipe[0].category}}</p>
-<a class="edit" routerLink="/recipe/edit/{{recipe[0].id}}">Edit</a>
+<div id="recipe" *ngIf="recipe">
+
+    <p>{{recipe.title}}</p>
+    <p>{{recipe.description}}</p>
+    <p>{{recipe.ingredients}}</p>
+    <p>{{recipe.steps}}</p>
+    <p>{{recipe.date | date}}</p>
+    <p>{{recipe.courseType}}</p>
+    <p>{{recipe.category}}</p>
+    <a class="edit" routerLink="/recipe/edit/{{recipe.id}}">Edit</a>
 </div>
