modifed enums display with slice in create

--- a/src/app/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-edit/recipe-edit.component.html
@@ -1,28 +1,32 @@
 <form>
-    <div *ngIf="recipe!">
-        <div class="form-group">
-            <input type="hidden" name="id" class="form-control" [(ngModel)]="recipe.id">
-            <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="title">
-        </div>
-        <div class="form-group">
-            <input type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="description">
-        </div>
-        <div class="form-group">
-            <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe.ingredients" placeholder="ingredients">
-        </div>
-        <div class="form-group">
-            <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="steps">
-        </div>
-        <div class="form-group">
-            <select name="courseType"[(ngModel)]="recipe.courseType">
-                <option *ngFor="let course of courseTypes | keyvalue" [ngValue]="course.value">
-                    {{course.value}}
-                </option>
-            </select>
-            <p>{{recipe.courseType}}</p>
-        </div>
-        <button type="submit" (click)="editRecipe()">Edit</button>
+    <div class="form-group">
+    <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="title">
+</div>
+<div class="form-group">
+    <input type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="description">
+</div>
+<div class="form-group">
+    <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe.ingredients" placeholder="ingredients">
+</div>
+<div class="form-group">
+    <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="steps">
+</div>
+<div class="form-group">
+    <select name="courseType"[(ngModel)]="recipe.category">
+        <option *ngFor="let category of categories | keyvalue" [ngValue]="category.value">
+            {{category.value}}
+        </option>
+    </select>
     </div>
+    <div class="form-group">
+        <select name="courseType"[(ngModel)]="recipe.courseType">
+            <option *ngFor="let course of courseTypes | keyvalue" [ngValue]="course.value">
+                {{course.value}}
+            </option>
+        </select>
+        </div>
+    <button type="submit" (click)="editRecipe()">Edit</button>
 </form>
+
 
 <a routerLink="/recipes">Back to home</a>
