--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -5,7 +5,7 @@
     <p>{{recipe.ingredients}}</p>
     <p>{{recipe.steps}}</p>
     <p>{{recipe.date | date}}</p>
-    <p>{{recipe.courseType}}</p>
-    <p>{{recipe.category}}</p>
+    <p>{{categoryTypesDisplay[recipe.category]}}</p>
+    <p>{{courseTypesDisplay[recipe.courseType]}}</p>
     <a class="edit" routerLink="/recipe/edit/{{recipe.id}}">Edit</a>
 </div>
