--- a/src/app/recipe-create/recipe-create.component.html
+++ b/src/app/recipe-create/recipe-create.component.html
@@ -13,6 +13,8 @@
     </div>
     <div class="form-group">
         <select name="courseType" [(ngModel)]="recipe.category">
+            <option value="" disabled selected>Select your option</option>
+            <option [ngValue]="null" >None</option>
             <option *ngFor="let category of categories | keyvalue:order | slice: 5" [ngValue]="category.value">
                 {{category.key}}
             </option>
@@ -20,6 +22,8 @@
     </div>
     <div>
         <select name="courseType" [(ngModel)]="recipe.courseType">
+            <option value="" disabled selected>Select your option</option>
+            <option [ngValue]="null" >None</option>
             <option *ngFor="let course of courseTypes | keyvalue:order | slice: 5" [ngValue]="course.value">
                 {{course.key}}
             </option>
