--- a/src/app/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-edit/recipe-edit.component.html
@@ -12,21 +12,28 @@
         <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="steps">
     </div>
     <div class="form-group">
-        <select name="courseType" [(ngModel)]="recipe.category">
-            <option *ngFor="let category of categories | keyvalue:order | slice: 5" [ngValue]="category.value">
-                {{category.key}}
-            </option>
-        </select>
+            <select name="courseType" [(ngModel)]="recipe.category">
+                <option value="" disabled selected>Select your option</option>
+                <option [ngValue]="null" >None</option>
+                <option *ngFor="let category of categories | keyvalue:order | slice: 5" [ngValue]="category.value">
+                    {{category.key}}
+                </option>
+            </select>
     </div>
-    <div>
-        <select name="courseType" [(ngModel)]="recipe.courseType">
-            <option *ngFor="let course of courseTypes | keyvalue:order | slice: 5" [ngValue]="course.value">
-                {{course.key}}
-            </option>
-        </select>
+    <div class="form-group">
+        <label>Course type
+            <select name="courseType" [(ngModel)]="recipe.courseType">
+                <option value="" disabled selected>Select your option</option>
+                <option [ngValue]="null">None</option>
+
+                <option *ngFor="let course of courseTypes | keyvalue:order | slice: 5" [ngValue]="course.value">
+                    {{course.key}}
+                </option>
+            </select>
+        </label>
     </div>
     <button type="submit" (click)="editRecipe()">Edit</button>
 </form>
 
 
-<a routerLink="/recipes">Back to home</a> 
+<a routerLink="/recipes">Back to home</a>
