added delete in service and component

--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -8,4 +8,5 @@
     <p>{{categoryTypesDisplay[recipe.category]}}</p>
     <p>{{courseTypesDisplay[recipe.courseType]}}</p>
     <a class="edit" routerLink="/recipe/edit/{{recipe.id}}">Edit</a>
+    <button class="delete" (click)="deleteRecipe()">Delete</button>
 </div>
