added styling and image to recipe interface

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<h1>{{title}}</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-danger bg-opacity-75">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">{{title}}</a>
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="/recipes">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="/create/">New</a>
+      </li>
+        </ul>
+      </div>
+  </nav>
 <router-outlet></router-outlet>
