Added image to recipe display (recipe-component)

--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,5 +1,6 @@
 <div id="recipe" *ngIf="recipe">
 
+    <img src="{{recipe.imageUrl}}" width="250">
     <p>{{recipe.title}}</p>
     <p>{{recipe.description}}</p>
     <p>{{recipe.ingredients}}</p>
