--- a/src/app/recipe-create/recipe-create.component.html
+++ b/src/app/recipe-create/recipe-create.component.html
@@ -1,15 +1,18 @@
 <form>
     <div class="form-group">
-        <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="title">
+        <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="Title (at least 5 characters, 300 max)">
     </div>
     <div class="form-group">
-        <input type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="description">
+        <input type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="Description (at least 10 characters, 500 max)">
     </div>
     <div class="form-group">
-        <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe.ingredients" placeholder="ingredients">
+        <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe.ingredients" placeholder="Ingredients">
     </div>
     <div class="form-group">
-        <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="steps">
+        <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="Recipe steps">
+    </div>
+    <div class="form-group">
+        <span>Image url:</span><input type="text" name="steps" class="form-control" [(ngModel)]="recipe.imageUrl" placeholder="Image url">
     </div>
     <div class="form-group">
         <select name="courseType" [(ngModel)]="recipe.category">
