added styling to recipes component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger bg-opacity-75">
-    <div class="container-fluid">
+    <div class="container-fluid fs-5">
       <a class="navbar-brand" href="#">{{title}}</a>
-        <ul class="navbar-nav me-auto">
+        <ul class="navbar-nav me-auto d-flex flex-row gap-3">
           <li class="nav-item">
             <a class="nav-link active" routerLink="/recipes">Home</a>
         </li>
