--- a/src/app/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-edit/recipe-edit.component.html
@@ -1,37 +1,50 @@
-<form>
+<form class="m-5 border border-1 p-4 bg-danger bg-opacity-75">
     <div class="form-group">
-        <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="title">
+        <label class="form-label text-white">Title</label>
+        <input type="text" name="title" class="form-control" [(ngModel)]="recipe.title" placeholder="Title">
+        <div class="form-text mb-3 text-white">
+          Your title must be 5-300 characters long
+        </div>
     </div>
     <div class="form-group">
-        <input type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="description">
+        <label class="form-label text-white">Description</label>
+        <textarea type="text" name="description" class="form-control" [(ngModel)]="recipe.description" placeholder="Description"></textarea>
+        <div class="form-text mb-3 text-white">
+            Your description must be 10-500 characters long
+          </div>
     </div>
     <div class="form-group">
-        <input type="text" name="ingredients" class="form-control" [(ngModel)]="recipe.ingredients" placeholder="ingredients">
+        <label class="form-label text-white">Ingredients</label>
+        <textarea type="text" name="ingredients" class="form-control mb-3" [(ngModel)]="recipe.ingredients" placeholder="Ingredients"></textarea>
     </div>
     <div class="form-group">
-        <input type="text" name="steps" class="form-control" [(ngModel)]="recipe.steps" placeholder="steps">
+        <label class="form-label text-white">Steps</label>
+        <textarea type="text" name="steps" class="form-control mb-3" [(ngModel)]="recipe.steps" placeholder="Steps"></textarea>
     </div>
     <div class="form-group">
-        <select name="courseType" [(ngModel)]="recipe.category">
+        <label class="form-label text-white">Your image url :</label>
+        <input type="text" name="steps" class="form-control mb-3" [(ngModel)]="recipe.imageUrl" placeholder="Image url">
+    </div>
+    <div class="form-group">
+        <label class="form-label text-white">Category</label>
+        <select name="category" class="form-select" [(ngModel)]="recipe.category">
             <option value="" disabled selected>Select your option</option>
-            <option [ngValue]="null">None</option>
+            <option [ngValue]="null" >None</option>
             <option *ngFor="let category of categories | keyvalue:order | slice: 5" [ngValue]="category.value">
                 {{category.key}}
             </option>
         </select>
     </div>
-    <div class="form-group">
-        <select name="courseType" [(ngModel)]="recipe.courseType">
-            <option value="" disabled>Select your option</option>
-            <option  value="undefined" selected [ngValue]="null">None</option>
-
+    <div>
+        <label class="form-label text-white">Course type</label>
+        <select name="courseType" class="form-select"  [(ngModel)]="recipe.courseType">
+            <option value="" disabled selected>Select your option</option>
+            <option [ngValue]="null" >None</option>
             <option *ngFor="let course of courseTypes | keyvalue:order | slice: 5" [ngValue]="course.value">
                 {{course.key}}
             </option>
         </select>
     </div>
-    <button type="submit" (click)="editRecipe()">Edit</button>
+    <button class="btn btn-danger mt-3" type="submit" (click)="editRecipe()">Edit</button>
+    
 </form>
-
-
-<a routerLink="/recipes">Back to home</a>
