added styling to single recipe display

--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -1,13 +1,24 @@
-<div id="recipe" *ngIf="recipe">
-
-    <img src="{{recipe.imageUrl}}" width="250">
-    <p>{{recipe.title}}</p>
-    <p>{{recipe.description}}</p>
-    <p>{{recipe.ingredients}}</p>
-    <p>{{recipe.steps}}</p>
-    <p>{{recipe.date | date}}</p>
-    <p>{{categoryTypesDisplay[recipe.category]}}</p>
-    <p>{{courseTypesDisplay[recipe.courseType]}}</p>
-    <a class="edit" routerLink="/recipe/edit/{{recipe.id}}">Edit</a>
-    <button class="delete" (click)="deleteRecipe()">Delete</button>
+<div id="recipe" *ngIf="recipe" class="text-center mt-3">
+    <img src="{{recipe.imageUrl}}" style="width: 30%" onerror="this.src='https://images.unsplash.com/photo-1565958011703-44f9829ba187?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80'" 
+    alt="recipe image" class="img-fluid">
+    <h1>{{recipe.title}}</h1>
+    <h2>{{recipe.description}}</h2>
+    <hr class="text-danger">
+    <h3>Ingredients :</h3>
+    <h3>{{recipe.ingredients}}</h3>
+    <hr class="text-danger">
+    <h3>Steps :</h3>
+    <h3>{{recipe.steps}}</h3>
+    <hr class="text-danger">
+    <h4>Added {{recipe.date | date}}</h4>
+    <div *ngIf="recipe.category">
+    <h4>Category : {{categoryTypesDisplay[recipe.category]}}</h4>
+    </div>
+    <div *ngIf="recipe.courseType">
+    <h4>Course type: {{courseTypesDisplay[recipe.courseType]}}</h4>
+    </div>
+    <div class="d-flex justify-content-center gap-5 m-3">
+        <button class="btn btn-danger btn-opacity-75" routerLink="/recipe/edit/{{recipe.id}}">Edit</button>
+        <button class="btn btn-danger" (click)="deleteRecipe()">Delete</button>
+    </div>
 </div>
